Bug 303396 - Assign tags to filtered images - not all images
Summary: Assign tags to filtered images - not all images
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 2.7.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-12 05:09 UTC by Oldřich Jedlička
Modified: 2012-07-17 07:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oldřich Jedlička 2012-07-12 05:09:31 UTC
I'm not sure whether this can be considered a bug or a feature, so please correct me. I think this is a misleading GUI, so it can be considered a bug.

The "Assign <tag> to All Images" assigns the tag to all images regardles of the selected filter. I somehow expected this to read "to All Visible Images", so either my expectation is wrong or the digikam could have one more action "Assign <tag> to All Visible Images".

Reproducible: Always
Comment 1 Marcel Wiesweg 2012-07-12 18:30:53 UTC
The "All" is in contrast to "selected" or "this" image. I dont see any use to assign tags to any invisible images, _this_ would lead to confusion. Neither would I like to extend that context menu, three items is already more than enough.
As usual, native speaker feedback is welcome if the language can be improved.
Comment 2 Oldřich Jedlička 2012-07-13 04:59:02 UTC
(In reply to comment #1)
> The "All" is in contrast to "selected" or "this" image. I dont see any use
> to assign tags to any invisible images, _this_ would lead to confusion.

Marcel, I completely agree and actually this is what happens - the tag is _currenty_ assigned to invisible images! It happened to me just two days ago and involved 10000 images (plus immediate metadata update, so it was really painful).

I've re-opened the bug, it looks like misunderstanding of what I wrote.
Comment 3 Marcel Wiesweg 2012-07-15 18:36:40 UTC
Git commit 62cc8197fcd1bb8bc8052aacfad8a3798155715c by Marcel Wiesweg.
Committed on 15/07/2012 at 20:35.
Pushed by mwiesweg into branch 'master'.

Dont use all, unfiltered, entries of the source model for providing "All" entries to assign a tag, use the filter model.

M  +2    -1    NEWS
M  +2    -2    digikam/dragdrop/imagedragdrop.cpp

http://commits.kde.org/digikam/62cc8197fcd1bb8bc8052aacfad8a3798155715c