Dont use all, unfiltered, entries of the source model for providing "All" entries to assign a tag, use the filter model.

BUG: 303396